--- a/WidgetTest/Base.lproj/Main.storyboard
+++ b/WidgetTest/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7YQ-Aq-c15">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--HomeView-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WidgetTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,95 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="firstWordLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dB9-No-u4O">
+                                <rect key="frame" x="91.5" y="179.5" width="193.5" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="secondWordLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xey-am-RP2">
+                                <rect key="frame" x="67" y="315.5" width="241" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="thirdWordLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7f-bJ-TYD">
+                                <rect key="frame" x="86.5" y="451.5" width="203" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="dB9-No-u4O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6Ik-8r-Klz"/>
+                            <constraint firstItem="x7f-bJ-TYD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7Cy-LF-zqg"/>
+                            <constraint firstItem="Xey-am-RP2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CPx-IE-Odo"/>
+                            <constraint firstItem="Xey-am-RP2" firstAttribute="top" secondItem="dB9-No-u4O" secondAttribute="bottom" constant="100" id="Yzq-WG-oWC"/>
+                            <constraint firstItem="x7f-bJ-TYD" firstAttribute="top" secondItem="Xey-am-RP2" secondAttribute="bottom" constant="100" id="bQP-4n-fhp"/>
+                            <constraint firstItem="Xey-am-RP2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tfk-ju-RGg"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="HomeView" id="y5P-hw-1vH"/>
+                    <connections>
+                        <outlet property="firstWordLabel" destination="dB9-No-u4O" id="P3r-jN-cUN"/>
+                        <outlet property="secondWordLabel" destination="Xey-am-RP2" id="ifu-av-z8T"/>
+                        <outlet property="thirdWordLabel" destination="x7f-bJ-TYD" id="usg-YG-bCB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="812" y="34.632683658170919"/>
+        </scene>
+        <!--secondView-->
+        <scene sceneID="qXF-qb-FU3">
+            <objects>
+                <viewController id="bSx-sx-D25" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wrG-i1-Ftg"/>
+                        <viewControllerLayoutGuide type="bottom" id="axD-rG-UDJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NPE-bW-NVU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SecondView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r0z-2N-scK">
+                                <rect key="frame" x="99.5" y="314.5" width="177.5" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="r0z-2N-scK" firstAttribute="centerX" secondItem="NPE-bW-NVU" secondAttribute="centerX" id="29Q-Kw-s1m"/>
+                            <constraint firstItem="r0z-2N-scK" firstAttribute="centerY" secondItem="NPE-bW-NVU" secondAttribute="centerY" id="AwF-i7-qr7"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="secondView" id="rFH-BG-b28"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OGg-rx-8KC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="322" y="837"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Mdz-eA-MoJ">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="7YQ-Aq-c15" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="lGm-9f-K2c">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="q38-4O-of4"/>
+                        <segue destination="bSx-sx-D25" kind="relationship" relationship="viewControllers" id="oKG-2j-8W7"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lTm-F4-TOx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-127.2" y="34.632683658170919"/>
         </scene>
     </scenes>
 </document>
