--- a/todayWidget/Base.lproj/MainInterface.storyboard
+++ b/todayWidget/Base.lproj/MainInterface.storyboard
@@ -19,50 +19,61 @@
                         <viewControllerLayoutGuide type="bottom" id="FKl-LY-JtV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="110"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="firstWordLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fbU-xo-BXQ">
-                                <rect key="frame" x="104" y="13.5" width="112" height="21"/>
+                                <rect key="frame" x="104" y="10" width="112" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="secondWordLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edE-P7-yK5">
-                                <rect key="frame" x="90.5" y="44.5" width="139" height="21"/>
+                                <rect key="frame" x="90.5" y="41" width="139" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="thirdWordLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dp3-Qu-oea">
-                                <rect key="frame" x="101" y="75.5" width="118" height="21"/>
+                                <rect key="frame" x="101" y="72" width="118" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bI2-JO-AIG">
-                                <rect key="frame" x="16" y="80" width="43" height="30"/>
+                                <rect key="frame" x="16" y="140" width="43" height="30"/>
                                 <state key="normal" title="reload"/>
                                 <connections>
                                     <action selector="reloadWord:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="APb-uH-UX0"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kdf-Ua-wUA">
-                                <rect key="frame" x="238" y="80" width="66" height="30"/>
+                                <rect key="frame" x="238" y="140" width="66" height="30"/>
                                 <state key="normal" title="go to app"/>
+                                <connections>
+                                    <action selector="goToApp:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="b46-8B-fce"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="userDefault" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZBf-j3-LMi">
+                                <rect key="frame" x="115.5" y="113" width="89" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="dp3-Qu-oea" firstAttribute="top" secondItem="edE-P7-yK5" secondAttribute="bottom" constant="10" id="9wh-cS-Hwf"/>
+                            <constraint firstItem="dp3-Qu-oea" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="4NI-MR-ocK"/>
+                            <constraint firstItem="fbU-xo-BXQ" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="10" id="6Ra-xT-Qtv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Kdf-Ua-wUA" secondAttribute="trailing" id="A0C-6Q-siJ"/>
+                            <constraint firstItem="edE-P7-yK5" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="DEY-ya-EDC"/>
                             <constraint firstItem="bI2-JO-AIG" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="Dra-mq-YOG"/>
+                            <constraint firstItem="ZBf-j3-LMi" firstAttribute="top" secondItem="dp3-Qu-oea" secondAttribute="bottom" constant="20" id="F7w-K2-3Z2"/>
                             <constraint firstItem="fbU-xo-BXQ" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="Gli-P4-1Gp"/>
-                            <constraint firstItem="edE-P7-yK5" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="MDS-tr-rQA"/>
-                            <constraint firstItem="edE-P7-yK5" firstAttribute="top" secondItem="fbU-xo-BXQ" secondAttribute="bottom" constant="10" id="N5Q-RA-uiW"/>
-                            <constraint firstItem="edE-P7-yK5" firstAttribute="centerY" secondItem="S3S-Oj-5AN" secondAttribute="centerY" id="P7n-uH-yTO"/>
-                            <constraint firstItem="dp3-Qu-oea" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="SwJ-rD-XJg"/>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="Kdf-Ua-wUA" secondAttribute="bottom" id="Zjx-px-pIK"/>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="bI2-JO-AIG" secondAttribute="bottom" id="hNH-mX-XYa"/>
+                            <constraint firstItem="Kdf-Ua-wUA" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="140" id="LSQ-dw-osH"/>
+                            <constraint firstItem="bI2-JO-AIG" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="140" id="PBi-AX-apj"/>
+                            <constraint firstItem="dp3-Qu-oea" firstAttribute="top" secondItem="edE-P7-yK5" secondAttribute="bottom" constant="10" id="ScI-qd-mNj"/>
+                            <constraint firstItem="edE-P7-yK5" firstAttribute="top" secondItem="fbU-xo-BXQ" secondAttribute="bottom" constant="10" id="bml-mS-7Y8"/>
+                            <constraint firstItem="ZBf-j3-LMi" firstAttribute="centerX" secondItem="S3S-Oj-5AN" secondAttribute="centerX" id="nRj-iI-pSf"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
@@ -70,13 +81,14 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="110"/>
+                    <size key="freeformSize" width="320" height="170"/>
                     <connections>
                         <outlet property="firstWordLabel" destination="fbU-xo-BXQ" id="ISC-p5-kTE"/>
                         <outlet property="goToAppButton" destination="Kdf-Ua-wUA" id="CJH-Np-IMU"/>
                         <outlet property="reloadButton" destination="bI2-JO-AIG" id="8gk-P2-wSC"/>
                         <outlet property="secondWordLabel" destination="edE-P7-yK5" id="J4N-Gn-hKq"/>
                         <outlet property="thirdWordLabel" destination="dp3-Qu-oea" id="g5R-u5-w13"/>
+                        <outlet property="userKeyLabel" destination="ZBf-j3-LMi" id="sA7-Fm-04U"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
